# drf-api-permissions-postgres

./: db.sqlite3  docker-compose.yml  pyproject.toml
book/: settings.py  urls.py
bookapp/: models.py  permissions.py  serializer.py  tests.py  url.py  views.py
bookapp/migrations/: 0001_initial.py
